# libmmo

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/workflows/: build.yml
src/main/java/world/rifted/libmmo/dfu/: BUILD  DFU.java
src/main/java/world/rifted/libmmo/dfu/minimessage/: BUILD  MiniMessageCodecs.java
src/main/java/world/rifted/libmmo/item/: BUILD  Item.java  ItemComponent.java  ItemComponentHandler.java  ItemComponentRegistry.java  ItemImpl.java  ItemRegistry.java
src/main/java/world/rifted/libmmo/registry/: BUILD  DFU.java  MapRegistry.java  MinestomCodecs.java  Registry.java  Resource.java
src/main/java/world/rifted/libmmo/registry/exception/: MissingEntryException.java
src/test/java/world/rifted/libmmo/demo/: BUILD  Demo.java
src/test/java/world/rifted/libmmo/demo/components/: Description.java  DescriptionHandler.java  DisplayName.java  DisplayNameHandler.java  Rarity.java  RarityHandler.java
src/test/resources/: BUILD
src/test/resources/data/: items.json
